<resources>
    <string name="app_name">Registration App</string>
    <string name="registration">Registration Form</string>
    <string name="gender">Gender</string>
    <string name="title">Welcome to Adventure Learning Club!</string>
    <string name="name">Full Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studentid">Student ID</string>
    <string name="school">School Name</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone Number</string>
    <string name="button">Register</string>
</resources>